--- a/index.html
+++ b/index.html
@@ -12,6 +12,188 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Noto+Serif+Thai:wght@300;400;700&family=Sarabun:wght@400;600&family=Kanit:wght@300;500;700&display=swap" rel="stylesheet">
 
     <style>
+
+        :root {
+      --gold:#C9922A; --gl:#F5C842; --red:#8B1A1A;
+      --blk:#0A0806; --cream:#F7F0E0; --glass:rgba(255,255,255,0.05);
+    }
+    *{margin:0;padding:0;box-sizing:border-box;}
+    body{
+      background:var(--blk);color:var(--cream);
+      font-family:'Noto Serif Thai',serif;overflow-x:hidden;line-height:1.6;
+      display:flex;flex-direction:column;align-items:center;
+    }
+
+    /* ── NAV ── */
+    .tnav{
+      position:fixed;top:0;width:100%;padding:1rem 5%;z-index:1000;
+      display:flex;justify-content:space-between;align-items:center;
+      background:rgba(10,8,6,0.95);border-bottom:1px solid rgba(201,146,42,0.2);
+      backdrop-filter:blur(10px);
+    }
+    .n-logo{font-family:'Cinzel Decorative',cursive;color:var(--gold);font-size:1.2rem;}
+    .n-links{display:flex;gap:20px;}
+    .n-link{color:var(--gold);font-size:0.85rem;cursor:pointer;transition:0.3s;}
+    .n-link:hover{color:var(--gl);}
+
+    /* ── PAGES ── */
+    .page{
+      display:none;width:100%;min-height:100vh;
+      padding:120px 10% 60px;opacity:0;transition:opacity 0.5s ease;
+      flex-direction:column;align-items:center;text-align:center;
+    }
+    .page.active{display:flex;opacity:1;}
+    h1,h2{font-family:'Cinzel Decorative',cursive;color:var(--gold);margin-bottom:1.5rem;width:100%;}
+    .sub-t{font-size:0.9rem;color:var(--gl);margin-bottom:2rem;letter-spacing:1px;width:100%;}
+    .img-container{width:100%;max-width:450px;margin:0 auto 2rem;border-radius:15px;overflow:hidden;border:2px solid var(--gold);}
+    .img-container img{width:100%;display:block;}
+    .card{background:var(--glass);border:1px solid rgba(201,146,42,0.15);padding:2rem;border-radius:15px;backdrop-filter:blur(5px);}
+    .btn-wrap{display:flex;width:100%;justify-content:center;margin-top:3rem;gap:20px;flex-wrap:wrap;}
+    .btn-gold{padding:12px 40px;background:linear-gradient(135deg,var(--gold),#8A641A);border:none;color:#000;font-weight:900;border-radius:50px;cursor:pointer;transition:0.3s;}
+    .btn-gold:hover{transform:scale(1.05);box-shadow:0 0 20px var(--gold);}
+    .hidden{display:none!important;}
+
+    /* ── P2 LAYOUT ── */
+    #p2{padding:80px 0 0;overflow:hidden;}
+    .p2-main{
+      display:flex;flex-direction:column;width:100%;
+      height:calc(100vh - 80px);
+    }
+    @media(min-width:1024px){
+      .p2-main{flex-direction:row;}
+    }
+    .p2-canvas-wrap{
+      flex:1;display:flex;flex-direction:column;
+      align-items:center;justify-content:center;padding:24px 40px;
+    }
+    .canvas-area{
+      background:radial-gradient(circle,#222 0%,#000 100%);
+      box-shadow:inset 0 0 100px rgba(0,0,0,0.8);
+      border:1px solid #333;border-radius:2.5rem;
+      aspect-ratio:1/1;width:min(70vh,100%);
+      display:flex;align-items:center;justify-content:center;
+      position:relative;overflow:hidden;
+    }
+    .canvas-area svg{width:100%;height:100%;filter:drop-shadow(0 35px 60px rgba(0,0,0,0.8));}
+    .p2-mobile-btns{
+      display:flex;margin-top:24px;gap:12px;width:100%;max-width:360px;
+    }
+    @media(min-width:768px){.p2-mobile-btns{display:none;}}
+    .p2-mobile-btn{
+      flex:1;padding:12px;background:#27272a;border-radius:12px;
+      font-size:12px;font-weight:700;border:1px solid #3f3f46;
+      color:var(--cream);cursor:pointer;
+    }
+    .p2-mobile-btn-gold{background:#c5a059;color:#000;border-color:#c5a059;}
+
+    /* ── SIDEBAR ── */
+    .sidebar-right{
+      width:100%;border-top:1px solid rgba(197,160,89,0.2);
+      background:rgba(15,15,15,0.95);backdrop-filter:blur(10px);
+      overflow-y:auto;padding:32px;
+    }
+    @media(min-width:1024px){
+      .sidebar-right{
+        width:380px;height:100%;
+        border-top:none;border-left:1px solid rgba(197,160,89,0.2);
+      }
+    }
+    .sidebar-right::-webkit-scrollbar{width:5px;}
+    .sidebar-right::-webkit-scrollbar-track{background:#0a0a0a;}
+    .sidebar-right::-webkit-scrollbar-thumb{background:#c5a059;border-radius:10px;}
+
+    .sb-top{
+      display:none;align-items:center;gap:16px;justify-content:flex-end;margin-bottom:16px;
+    }
+    @media(min-width:768px){.sb-top{display:flex;}}
+    .sb-rnd{font-size:14px;color:#a1a1aa;background:none;border:none;cursor:pointer;}
+    .sb-rnd:hover{color:#c5a059;}
+    .sb-save{
+      background:#c5a059;color:#000;padding:8px 20px;
+      border-radius:9999px;font-size:14px;font-weight:700;border:none;cursor:pointer;
+    }
+    .sb-save:hover{background:#b08d4a;}
+
+    .sb-title{color:#c5a059;font-weight:700;font-size:18px;margin-bottom:20px;}
+    .sb-section{margin-bottom:24px;}
+    .sb-label{
+      font-size:10px;color:#71717a;text-transform:uppercase;
+      letter-spacing:0.2em;font-weight:700;display:block;margin-bottom:12px;
+    }
+
+    /* char/pattern/crown/eye button grids */
+    .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:8px;}
+    .grid-2{display:grid;grid-template-columns:repeat(2,1fr);gap:8px;}
+    .grid-1{display:grid;gap:12px;}
+    .sb-btn{
+      padding:10px 8px;background:rgba(39,39,42,0.5);
+      border:1px solid #27272a;border-radius:12px;
+      font-size:11px;color:var(--cream);cursor:pointer;
+      font-family:'Noto Serif Thai',serif;transition:all 0.2s;
+    }
+    .sb-btn:hover{border-color:#c5a059;}
+    .sb-btn.active-btn{background:#c5a059!important;color:#000!important;font-weight:bold;box-shadow:0 0 15px rgba(197,160,89,0.3);}
+    .sb-btn-sm{
+      flex:1;padding:8px 4px;background:#27272a;
+      border-radius:8px;font-size:10px;color:var(--cream);
+      cursor:pointer;border:1px solid transparent;
+      font-family:'Noto Serif Thai',serif;transition:all 0.2s;
+    }
+    .sb-btn-sm.active-btn{background:#c5a059!important;color:#000!important;font-weight:bold;}
+    .sb-box{
+      background:rgba(9,9,11,0.4);padding:12px;
+      border-radius:12px;border:1px solid #27272a;
+    }
+    .sb-box-label{font-size:10px;color:#71717a;margin-bottom:8px;}
+    .sb-flex{display:flex;gap:8px;}
+
+    /* color pickers */
+    .color-row{
+      display:flex;align-items:center;justify-content:space-between;
+      background:rgba(39,39,42,0.3);padding:12px;
+      border-radius:12px;border:1px solid #27272a;margin-bottom:8px;
+    }
+    .color-label{font-size:12px;color:#c5a059;}
+    .color-input-wrapper{
+      position:relative;width:38px;height:38px;overflow:hidden;
+      border-radius:10px;border:2px solid #333;transition:all 0.2s;
+    }
+    .color-input-wrapper:hover{border-color:#c5a059;transform:scale(1.05);}
+    .color-input-wrapper input{
+      position:absolute;top:-50%;left:-50%;width:200%;height:200%;cursor:pointer;
+    }
+
+    /* apply to AR button */
+    .btn-apply-ar{
+      width:100%;padding:12px;border-radius:12px;font-size:14px;font-weight:700;
+      background:linear-gradient(135deg,var(--gold),#8A641A);color:#000;
+      border:none;cursor:pointer;margin-top:8px;
+      font-family:'Noto Serif Thai',serif;transition:0.2s;
+    }
+    .btn-apply-ar:hover{transform:scale(1.02);box-shadow:0 0 20px var(--gold);}
+
+    /* ── MODAL ── */
+    #modal{
+      position:fixed;inset:0;background:rgba(0,0,0,0.9);
+      display:flex;align-items:center;justify-content:center;
+      opacity:0;pointer-events:none;transition:all 0.3s;z-index:50;padding:16px;
+    }
+    #modal.open{opacity:1;pointer-events:all;}
+    .modal-box{
+      background:#18181b;border:2px solid #c5a059;padding:40px;
+      border-radius:2rem;text-align:center;max-width:360px;width:100%;
+    }
+    .modal-icon{
+      width:80px;height:80px;background:#c5a059;color:#000;
+      border-radius:50%;display:flex;align-items:center;justify-content:center;
+      margin:0 auto 24px;
+    }
+    .modal-title{font-size:24px;font-weight:700;margin-bottom:16px;color:#c5a059;}
+    .modal-close{
+      width:100%;padding:16px;background:#c5a059;color:#000;
+      font-weight:900;border-radius:16px;border:none;cursor:pointer;font-size:16px;
+      font-family:'Noto Serif Thai',serif;
+    }
         :root {
             --gold:#C9922A; --gl:#F5C842; --red:#8B1A1A;
             --blk:#0A0806; --cream:#F7F0E0; --glass:rgba(255,255,255,0.05);
@@ -58,7 +240,7 @@
         .color-input-wrapper input { position: absolute; top: -50%; left: -50%; width: 200%; height: 200%; cursor: pointer; }
         .active-btn { background: #c5a059 !important; color: #000 !important; font-weight: bold; }
 
-        /* ── P4 Exhibition Styles ── */
+        /* ── P4 Exhibition Styles test ── */ 
         #ar-wrapper {
             position: relative; width: 100%; max-width: 600px; aspect-ratio: 1/1;
             border-radius: 28px; overflow: hidden; border: 2px solid var(--gold);
