--- a/index.html
+++ b/index.html
@@ -604,11 +604,11 @@
     </div>
 
     <div style="display: flex; gap: 8px; margin-top: 25px; flex-wrap: wrap; justify-content: center; width: 100%; padding: 0 20px;">
-      <button onclick="changeKhon(1)" class="khon-btn active" id="kb-1">แบบที่ 1</button>
-<button onclick="changeKhon(2)" class="khon-btn" id="kb-2">แบบที่ 2</button>
-<button onclick="changeKhon(3)" class="khon-btn" id="kb-3">แบบที่ 3</button>
-<button onclick="changeKhon(4)" class="khon-btn" id="kb-4">แบบที่ 4</button>
-<button onclick="changeKhon(5)" class="khon-btn" id="kb-5">แบบที่ 5</button>
+      <button onclick="changeKhon(1)" class="khon-btn active" id="kb-1">พระฤาษี</button>
+<button onclick="changeKhon(2)" class="khon-btn" id="kb-2">พระปัญจสิงขร</button>
+<button onclick="changeKhon(3)" class="khon-btn" id="kb-3">พระพิราพ</button>
+<button onclick="changeKhon(4)" class="khon-btn" id="kb-4">พระพรหม</button>
+<button onclick="changeKhon(5)" class="khon-btn" id="kb-5">พระวิศณุกรรม</button>
     </div>
 
     <style>
